--- a/UI/index.css
+++ b/UI/index.css
@@ -38,6 +38,19 @@ a:focus, a:hover {
     cursor: -moz-grabbing;
     cursor: -webkit-grabbing;
 }
+.clear-input-button {
+    background-color: red;
+    position: absolute;
+    right: 15px;
+    top: 0;
+    z-index: 1;
+    width: 30px;
+    opacity: 0.7;
+}
+.clear-input-button:focus,
+.clear-input-button:hover {
+    opacity: 1.0;
+}
 .command-container {
     position: sticky;
     bottom: 0;
